--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ How does this network infrastructure work? What are the design principles upon w
 This course assumes a basic familiarity with networking concepts. The course will consist of a reading/lecture/discussion component and a project component. The class will cover approximately 50 research papers on various aspects of computer networking. These papers will introduce students to the basic design principles on which today's networks are based. In addition, these papers will cover recent proposals to improve network performance, functionality and scalability. Specific topics that will be covered include: LAN/WAN technologies, congestion/flow control, traffic analysis, routing, internetworking, multicast, security, and quality of service. Students are expected to read papers before the class and participate in the discussion during the class.
       </p>
       <p>Contact: Prof Justine Sherry: sherry@cs.cmu.edu</p>
-
+      <p>test</p>
 
   </body>
 </html>
