--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
-  <head>
-    <title>Graduate Networks</title>
-  </head>
+---
+layout: cmu
+title: Graduate Computer Networks
+---
 
-  <body>
+<div class="row">
+  <div class="col-md-12">
     <h1>Research in Computer Networks</h1>
 
     <p>
@@ -20,17 +21,14 @@
         To investigate novel ideas in networking through a semester-long research project.
       </li>
       <p>
-The past few years have seen a remarkable growth in the global network infrastructure. The Internet has grown from a research curiosity to something we all take for granted.
+      The past few years have seen a remarkable growth in the global network infrastructure. The Internet has grown from a research curiosity to something we all take for granted.
       </p>
       <p>
-How does this network infrastructure work? What are the design principles upon which it is based, and how are those principles applied in practice? How can we make the Internet work better today? We will examine these issues and more during the course.
+      How does this network infrastructure work? What are the design principles upon which it is based, and how are those principles applied in practice? How can we make the Internet work better today? We will examine these issues and more during the course.
       </p>
       <p>
-This course assumes a basic familiarity with networking concepts. The course will consist of a reading/lecture/discussion component and a project component. The class will cover approximately 50 research papers on various aspects of computer networking. These papers will introduce students to the basic design principles on which today's networks are based. In addition, these papers will cover recent proposals to improve network performance, functionality and scalability. Specific topics that will be covered include: LAN/WAN technologies, congestion/flow control, traffic analysis, routing, internetworking, multicast, security, and quality of service. Students are expected to read papers before the class and participate in the discussion during the class.
+      This course assumes a basic familiarity with networking concepts. The course will consist of a reading/lecture/discussion component and a project component. The class will cover approximately 50 research papers on various aspects of computer networking. These papers will introduce students to the basic design principles on which today's networks are based. In addition, these papers will cover recent proposals to improve network performance, functionality and scalability. Specific topics that will be covered include: LAN/WAN technologies, congestion/flow control, traffic analysis, routing, internetworking, multicast, security, and quality of service. Students are expected to read papers before the class and participate in the discussion during the class.
       </p>
       <p>Contact: Prof Justine Sherry: sherry@cs.cmu.edu</p>
-      <p>test</p>
-
-  </body>
-</html>
-
+  </div><!--col-md-12-->
+</div><!--row-->
