--- a/index.html
+++ b/index.html
@@ -5,30 +5,24 @@ title: Graduate Computer Networks
 
 <div class="row">
   <div class="col-md-12">
-    <h1>Research in Computer Networks</h1>
 
     <p>
-    15-744 is a graduate course in computer networks. The goals are:
+    15-744 is a doctoral course in computer networks. The goals are:
     </p>
     <ul>
       <li>
         To understand the state of the art in network protocols, network architecture, and networked systems.
       </li>
       <li>
-        To understand how to engage in networking research.
+        To engage with systems research at a scholarly level through written and oral argument.
       </li>
       <li>
-        To investigate novel ideas in networking through a semester-long research project.
+        To investigate novel ideas and make new scholarly arguments through a semester-long research project in computer networking.
       </li>
-      <p>
-      The past few years have seen a remarkable growth in the global network infrastructure. The Internet has grown from a research curiosity to something we all take for granted.
-      </p>
-      <p>
-      How does this network infrastructure work? What are the design principles upon which it is based, and how are those principles applied in practice? How can we make the Internet work better today? We will examine these issues and more during the course.
-      </p>
-      <p>
-      This course assumes a basic familiarity with networking concepts. The course will consist of a reading/lecture/discussion component and a project component. The class will cover approximately 50 research papers on various aspects of computer networking. These papers will introduce students to the basic design principles on which today's networks are based. In addition, these papers will cover recent proposals to improve network performance, functionality and scalability. Specific topics that will be covered include: LAN/WAN technologies, congestion/flow control, traffic analysis, routing, internetworking, multicast, security, and quality of service. Students are expected to read papers before the class and participate in the discussion during the class.
-      </p>
-      <p>Contact: Prof Justine Sherry: sherry@cs.cmu.edu</p>
+    </ul>
+    <p>
+    Instructor: Prof. Justine Sherry (<a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>)<br/>
+    Syllabus: Batata.
+    </p>
   </div><!--col-md-12-->
 </div><!--row-->
