--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@ layout: cmu
 title: Graduate Computer Networks
 ---
 
+<!-- OVERVIEW AND LINK TO SYLLABUS -->
 <div class="row">
   <div class="col-md-12">
-
+    <p class="lead">Overview</p>
     <p>
     15-744 is a doctoral course in computer networks. The goals are:
     </p>
+    <p> 
     <ul>
       <li>
         To understand the state of the art in network protocols, network architecture, and networked systems.
@@ -20,9 +22,67 @@ title: Graduate Computer Networks
         To investigate novel ideas and make new scholarly arguments through a semester-long research project in computer networking.
       </li>
     </ul>
-    <p>
-    Instructor: Prof. Justine Sherry (<a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>)<br/>
-    Syllabus: Batata.
+    <a href="">Before enrolling in this course, please read the syllabus.</a>
     </p>
   </div><!--col-md-12-->
 </div><!--row-->
+
+<hr />
+
+<!-- STAFF SECTION -->
+<div class="row">
+  <div class="col-md-12">
+  <p class="lead">Staff</p>
+  </div>
+</div>
+
+<div class="row">
+      <div class="col-md-3">
+        <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="justine.jpg" alt="">
+          <br/>
+          Justine Sherry <br/>
+          <a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>
+          Instructor <br/>
+        </div> <!-- CARD -->
+      </div> <!-- COL -->
+
+      <div class="col-md-3">
+        <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="sannan.jpg" alt="">
+          <br/>
+          Sannan Tariq<br/>
+          <a href="mailto:stariq@cs.cmu.edu">stariq@cs.cmu.edu</a>
+          Teaching Assistant<br/>
+        </div> <!-- CARD-->
+      </div> <!-- COL -->
+</div><!--row-->
+
+<hr />
+
+<!-- HOMEWORKS -->
+<div class="row">
+  <div class="col-md-12">
+    <p class="lead">Homework</p>
+  </div><!--col-md-12-->
+</div><!--row-->
+
+<hr />
+
+<!-- RESOURCES -->
+<div class="row">
+  <div class="col-md-12">
+    <p class="lead">Resources</p>
+  </div><!--col-md-12-->
+</div><!--row-->
+
+<hr />
+
+<!-- COURSE SCHEDULE -->
+<div class="row">
+  <div class="col-md-12">
+    <p class="lead">Schedule</p>
+  </div><!--col-md-12-->
+</div><!--row-->
+
+
