--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Graduate Computer Networks
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    15-744 is a doctoral course in computer networks. The goals are:
+    15-744 is a doctoral course in computer networking research. The goals are:
     </p>
     <p> 
     <ul>
