almost complete homepage...

--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@ title: Graduate Computer Networks
 <!-- RESOURCES -->
 <div class="row">
   <div class="col-md-12">
-    <p class="lead">Resources</p>
+    <p class="lead">Writing Resources</p>
+    <ul>
+      <li><a href="topic-sentences-gcc.pdf">The BLUF Handout</a></li>
+      <li><a href="systems-writing-rubric.pdf">Prof Sherry's Systems Paper Rubric</a></li>
+      <li><a href="weekly-paragraph-rubric.pdf">Weekly Paragraph Rubric</a></li>
+      <li><a href="https://www.cmu.edu/gcc/appointment/index.html">Make an appointment at the GCC</a></li>
+    </ul>
   </div><!--col-md-12-->
 </div><!--row-->
 
@@ -73,8 +79,12 @@ title: Graduate Computer Networks
 <!-- COURSE SCHEDULE -->
 <div class="row">
   <div class="col-md-12">
-    <p class="lead">Schedule</p>
+    <p class="lead">TENTATIVE Schedule</p>
   </div><!--col-md-12-->
 </div><!--row-->
-
+<div class="row">
+  <div class="col-md-12">
+    <iframe width=100% height=600 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTR39l7-TrtCQrI4x5mLNNu7XQKBI9QZw1RAL5by-TBS3QyHjIEe54MlF_6EBoH1AyhEFJA3ou5YE2Y/pubhtml?gid=1233965664&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+  </div>
+</div>
 
