--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: cmu
-title: Graduate Computer Networks
+title: (Spring 2020) Graduate Computer Networks 
 ---
 
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
