--- a/index.html
+++ b/index.html
@@ -29,33 +29,61 @@ title: (Spring 2020) Graduate Computer Networks
 
 <hr />
 
+<!-- HOMEWORK -->
+<div class="row">
+  <div class="col-md-12">
+    <p class="lead">Quick Links</a>
+  </div>
+</div>
+<div class="row">  
+  <div class="col-md-6">
+    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
+      <p class="lead">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">Fill out Peer Feedback
+      </a>
+      </p>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
+      <p class="lead">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">Turn in Homework
+      </a>
+      </p>
+    </div>
+  </div>
+
+</div>
+
+<hr />
+
 <!-- STAFF SECTION -->
 <div class="row">
   <div class="col-md-12">
-  <p class="lead">Staff</p>
+    <p class="lead">Staff</p>
   </div>
 </div>
 
 <div class="row">
-      <div class="col-md-3">
-        <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="justine.jpg" alt="">
-          <br/>
-          Justine Sherry <br/>
-          <a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>
-          Instructor <br/>
-        </div> <!-- CARD -->
-      </div> <!-- COL -->
+  <div class="col-md-3">
+    <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="justine.jpg" alt="">
+      <br/>
+      Justine Sherry <br/>
+      <a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>
+      Instructor <br/>
+    </div> <!-- CARD -->
+  </div> <!-- COL -->
 
-      <div class="col-md-3">
-        <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="sannan.jpg" alt="">
-          <br/>
-          Sannan Tariq<br/>
-          <a href="mailto:stariq@cs.cmu.edu">stariq@cs.cmu.edu</a>
-          Teaching Assistant<br/>
-        </div> <!-- CARD-->
-      </div> <!-- COL -->
+  <div class="col-md-3">
+    <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="sannan.jpg" alt="">
+      <br/>
+      Sannan Tariq<br/>
+      <a href="mailto:stariq@cs.cmu.edu">stariq@cs.cmu.edu</a>
+      Teaching Assistant<br/>
+    </div> <!-- CARD-->
+  </div> <!-- COL -->
 </div><!--row-->
 
 <hr />
