--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ title: (Spring 2020) Graduate Computer Networks
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">Fill out Peer Feedback
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">
+        Fill out Peer Feedback
       </a>
       </p>
     </div>
@@ -47,7 +48,8 @@ title: (Spring 2020) Graduate Computer Networks
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">Turn in Homework
+      <a href="https://www.gradescope.com/courses/78070">
+        Turn in Homework
       </a>
       </p>
     </div>
