update homepage with link to writing rubric

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: (Spring 2020) Graduate Computer Networks
     <p class="lead">Writing Resources</p>
     <ul>
       <li><a href="topic-sentences-gcc.pdf">The BLUF Handout</a></li>
-      <li><a href="systems-writing-rubric.pdf">Prof Sherry's Systems Paper Rubric</a></li>
+      <li><a href="https://docs.google.com/document/d/14g-4txTMwJ4YL61qOcaH6bJWKh59PkI1S-FB1KjeMS4/edit?usp=sharing">Prof Sherry's Systems Paper Rubric</a></li>
       <li><a href="weekly-paragraph-rubric.pdf">Weekly Paragraph Rubric</a></li>
       <li><a href="https://www.cmu.edu/gcc/appointment/index.html">Make an appointment at the GCC</a></li>
     </ul>
