--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@ title: (Spring 2020) Graduate Computer Networks
 <!-- COURSE SCHEDULE -->
 <div class="row">
   <div class="col-md-12">
-    <p class="lead">TENTATIVE Schedule</p>
+    <p class="lead">Schedule</p>
   </div><!--col-md-12-->
 </div><!--row-->
 <div class="row">
   <div class="col-md-12">
-    <iframe width=100% height=600 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTR39l7-TrtCQrI4x5mLNNu7XQKBI9QZw1RAL5by-TBS3QyHjIEe54MlF_6EBoH1AyhEFJA3ou5YE2Y/pubhtml?gid=1233965664&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-  </div>
+    <iframe width=100% height=800 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQo8Xx0DfCbARbBFdk5ADUJi-wBRcvD7VECJttJawTgeQAznh3pU2QYLaSuaZ-rnS5ROnbtzRUqsPVn/pubhtml?gid=420192651&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    </div>
 </div>
 
