--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@ title: (Spring 2020) Graduate Computer Networks
 <div class="row">
   <div class="col-md-3">
     <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="justine.jpg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.mohsaied.com/assets/img/prof_pic.jpg" alt="">
       <br/>
-      Justine Sherry <br/>
-      <a href="mailto:sherry@cs.cmu.edu">sherry@cs.cmu.edu</a>
+      Mohamed Abdelfattah <br/>
+      <a href="mailto:mohamed@cornell.edu">mohamed@cornell.edu</a>
       Instructor <br/>
     </div> <!-- CARD -->
   </div> <!-- COL -->
 
   <div class="col-md-3">
     <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="sannan.jpg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="https://i.imgur.com/CNhZzYY.jpeg" alt="">
       <br/>
-      Sannan Tariq<br/>
-      <a href="mailto:stariq@cs.cmu.edu">stariq@cs.cmu.edu</a>
+      Elon Musk<br/>
+      <a href="mailto:stariq@cs.cmu.edu">musk@tesla.edu</a>
       Teaching Assistant<br/>
     </div> <!-- CARD-->
   </div> <!-- COL -->
