--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: cmu
-title: (Spring 2020) Graduate Computer Networks 
+title: ML Hardware and Systems
 ---
 
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
