--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: ML Hardware and Systems
       <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.mohsaied.com/assets/img/prof_pic.jpg" alt="">
       <br/>
       Mohamed Abdelfattah <br/>
-      <a href="mailto:mohamed@cornell.edu">email</a>
+      <a href="mailto:mohamed@cornell.edu">mohamed@cornell.edu</a>
       Instructor <br/>
     </div> <!-- CARD -->
   </div> <!-- COL -->
@@ -82,7 +82,7 @@ title: ML Hardware and Systems
       <img class="rounded-circle img-fluid d-block mx-auto" src="https://i.imgur.com/CNhZzYY.jpeg" alt="">
       <br/>
       Elon Musk<br/>
-      <a href="mailto:stariq@cs.cmu.edu">email</a>
+      <a href="mailto:stariq@cs.cmu.edu">musk@tesla.com</a>
       Teaching Assistant<br/>
     </div> <!-- CARD-->
   </div> <!-- COL -->
