--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@ title: ML Hardware and Systems
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    15-744 is a doctoral course in computer networking research. The goals are:
+    ECE 5545 is a master's level course that takes a hardware-centric view of machine learning systems. From constrained embedded microcontrollers to large distributed multi-GPU systems, we will investigate how these platforms run machine learning algorithms. These are our learning objectives:
     </p>
     <p> 
     <ul>
       <li>
-        To understand the state of the art in network protocols, network architecture, and networked systems.
+        Understand how machine learning algorithms run on computer systems. This includes both the hardware and the software that maps computations onto the computer chips.
       </li>
       <li>
-        To engage with systems research at a scholarly level through written and oral argument.
+        Apply key optimization techniques such as pruning, quantization and distillation to machine learning algorithms to improve their efficiency on different hardware platforms.
       </li>
       <li>
-        To investigate novel ideas and make new scholarly arguments through a semester-long research project in computer networking.
+        Analyze the performance and efficiency of different hardware platforms with and without optimizations, and understand the impact of efficiency optimizations on the accuracy of a machine learning algorithm.
+      </li>
+      <li>
+        Design both the hardware and software components of a machine learning computer system, including a compiler to map/optimize neural networks to different hardware.
       </li>
     </ul>
-    <a href="https://docs.google.com/document/d/1QoGrlPpcMWG-g087vexnA_c0ZCulYqsWcfM7fKWwrow/edit?usp=sharing">Before enrolling in this course, please read the syllabus.</a>
+    <a href="https://docs.google.com/document/d/1yIbeONqmZeCxuy7s6IQdXMlbDXLZUD0HcTJON_pZZLg/edit?usp=sharing">Please read the syllabus.</a>
     </p>
   </div><!--col-md-12-->
 </div><!--row-->
