--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ title: ML Hardware and Systems
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5BHbIXQJ5ME4hktkBZfSkRVc5L2CD7YX1N-GainG53hh-FA/viewform?usp=sf_link">
-        Fill out Peer Feedback
+      <a href="https://edstem.org/us/courses/16526/admin/general">
+        Discussion Board
       </a>
       </p>
     </div>
@@ -51,13 +51,12 @@ title: ML Hardware and Systems
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://www.gradescope.com/courses/78070">
+      <a href="https://www.gradescope.com/courses/342889">
         Turn in Homework
       </a>
       </p>
     </div>
   </div>
-
 </div>
 
 <hr />
@@ -91,21 +90,6 @@ title: ML Hardware and Systems
   </div> <!-- COL -->
 </div><!--row-->
 
-<hr />
-
-
-<!-- RESOURCES -->
-<div class="row">
-  <div class="col-md-12">
-    <p class="lead">Writing Resources</p>
-    <ul>
-      <li><a href="topic-sentences-gcc.pdf">The BLUF Handout</a></li>
-      <li><a href="https://docs.google.com/document/d/14g-4txTMwJ4YL61qOcaH6bJWKh59PkI1S-FB1KjeMS4/edit?usp=sharing">Prof Sherry's Systems Paper Rubric</a></li>
-      <li><a href="weekly-paragraph-rubric.pdf">Weekly Paragraph Rubric</a></li>
-      <li><a href="https://www.cmu.edu/gcc/appointment/index.html">Make an appointment at the GCC</a></li>
-    </ul>
-  </div><!--col-md-12-->
-</div><!--row-->
 
 <hr />
 
