--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: ML Hardware and Systems
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    ECE 5545 is a master's level course that takes a hardware-centric view of machine learning systems. From constrained embedded microcontrollers to large distributed multi-GPU systems, we will investigate how these platforms run machine learning algorithms. These are our learning objectives:
+    ECE 5545 is a master's level course that takes a hardware-centric view of machine learning systems, from constrained embedded microcontrollers to large distributed multi-GPU systems. These are our learning objectives:
     </p>
     <p> 
     <ul>
