--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: cmu
 title: ML Hardware and Systems
 ---
 
+NOTE: Website is under construction!
+
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
 <div class="row">
   <div class="col-md-12">
