--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: cmu
 title: ML Hardware and Systems
 ---
 
-NOTE: Website is under construction!
+NOTE: Website is under construction! <br><br><br>
 
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
 <div class="row">
