--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ NOTE: Website is under construction! <br><br><br>
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
       <a href="https://edstem.org/us/courses/16526/admin/general">
-        Discussion Board
+        Discussion
       </a>
       </p>
     </div>
@@ -54,7 +54,7 @@ NOTE: Website is under construction! <br><br><br>
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
       <a href="https://www.gradescope.com/courses/342889">
-        Turn in Homework
+        Gradescope
       </a>
       </p>
     </div>
