--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@ NOTE: Website is under construction! <br><br><br>
       </p>
     </div>
   </div>
+  <div class="col-md-6">
+    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
+      <p class="lead">
+      <a href="https://cornell.zoom.us/j/99339921725?pwd=WmRFWVBOc0krT3lTZG5uUXlMV3NvUT09">
+        Zoom
+      </a>
+      </p>
+    </div>
+  </div>
 </div>
 
 <hr />
