--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ NOTE: Website is under construction! <br><br><br>
       </p>
     </div>
   </div>
-  <br><br>
-  <div class="col-md-6">
+  <div class="col-md-6" style="padding-top:20px">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
       <a href="https://cornell.zoom.us/j/99339921725?pwd=WmRFWVBOc0krT3lTZG5uUXlMV3NvUT09">
