--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ NOTE: Website is under construction! <br><br><br>
 
   <div class="col-md-3">
     <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="https://i.imgur.com/CNhZzYY.jpeg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.guandaoyang.com/images/myself.jpg" alt="">
       <br/>
-      Elon Musk<br/>
-      <a href="mailto:stariq@cs.cmu.edu">musk@tesla.com</a>
+      Guandao Yang<br/>
+      <a href="mailto:gy46@cornell.edu">gy46@cornell.edu</a>
       Teaching Assistant<br/>
     </div> <!-- CARD-->
   </div> <!-- COL -->
