--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ NOTE: Website is under construction! <br><br><br>
 
   <div class="col-md-3">
     <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.guandaoyang.com/images/myself.jpg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="guandao.jpeg" alt="">
       <br/>
       Guandao Yang<br/>
       <a href="mailto:gy46@cornell.edu">gy46@cornell.edu</a>
