--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ NOTE: Website is under construction! <br><br><br>
       <img class="rounded-circle img-fluid d-block mx-auto" src="https://www.mohsaied.com/assets/img/prof_pic.jpg" alt="">
       <br/>
       Mohamed Abdelfattah <br/>
-      <a href="mailto:mohamed@cornell.edu">mohamed@cornell.edu</a>
+      <a href="mailto:mohamed@cornell.edu"><small>mohamed@cornell.edu</small></a>
       Instructor <br/>
     </div> <!-- CARD -->
   </div> <!-- COL -->
