--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@ layout: cmu
 title: ML Hardware and Systems
 ---
 
-NOTE: Website is under construction! <br><br><br>
-
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
 <div class="row">
   <div class="col-md-12">
@@ -107,7 +105,7 @@ NOTE: Website is under construction! <br><br><br>
 <!-- COURSE SCHEDULE -->
 <div class="row">
   <div class="col-md-12">
-    <p class="lead">Schedule</p>
+    <p class="lead">Schedule (Under Construction)</p>
   </div><!--col-md-12-->
 </div><!--row-->
 <div class="row">
