--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@ title: ML Hardware and Systems
       </p>
     </div>
   </div>
+  <div class="col-md-6" style="padding-top:20px">
+    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
+      <p class="lead">
+      <a href="https://youtube.com/playlist?list=PL0mFAhrXqy9CuopJhAB8GVu_Oy7J0ery6">
+        Lecture Videos
+      </a>
+      </p>
+    </div>
+  </div>
 </div>
+
+
+
 
 <hr />
 
