--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ title: ML Hardware and Systems
 
   <div class="col-md-3">
     <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="yash.jpg" alt="">
+      <img class="rounded-circle img-fluid d-block mx-auto" src="yash.jpeg" alt="">
       <br/>
       Yash Akhauri<br/>
       <a href="mailto:ya255@cornell.edu">ya255@cornell.edu </a>
