--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: ML Hardware and Systems
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    ECE 5545 is a master's level course that takes a hardware-centric view of machine learning systems, from constrained embedded microcontrollers to large distributed multi-GPU systems. These are our learning objectives:
+    ECE 5545 (CS 5775) is a master's level course that takes a hardware-centric view of machine learning systems, from constrained embedded microcontrollers to large distributed multi-GPU systems. These are our learning objectives:
     </p>
     <p> 
     <ul>
@@ -42,7 +42,7 @@ title: ML Hardware and Systems
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://edstem.org/us/courses/16526/discussion/">
+      <a href="https://edstem.org/us/courses/32987/discussion/">
         Discussion
       </a>
       </p>
@@ -51,7 +51,7 @@ title: ML Hardware and Systems
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://www.gradescope.com/courses/342889">
+      <a href="https://www.gradescope.com/courses/483641">
         Gradescope
       </a>
       </p>
