--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ title: ML Hardware and Systems
       Mohamed Abdelfattah <br/>
       <a href="mailto:mohamed@cornell.edu"><small>mohamed@cornell.edu</small></a>
       Instructor <br/>
+      <small>Office Hours: Wed 1-1.30pm</small><br>
+      <small>Bloomberg 257</small><br>
     </div> <!-- CARD -->
   </div> <!-- COL -->
 
