--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ title: ML Hardware and Systems
       <br/>
       Mohamed Abdelfattah <br/>
       <a href="mailto:mohamed@cornell.edu"><small>mohamed@cornell.edu</small></a>
-      Instructor <br/>
-      <small>Office Hours: Wed 1-1.30pm</small><br>
-      <small>Bloomberg 257</small><br>
+      Instructor <br/><br/>
+      <small>Office Hours:<br>Wed 1-1.30pm</small>
+      <small>Bloomberg 257</small>
     </div> <!-- CARD -->
   </div> <!-- COL -->
 
