--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ title: ML Hardware and Systems
       <br/>
       Yash Akhauri<br/>
       <a href="mailto:ya255@cornell.edu">ya255@cornell.edu </a>
-      Teaching Assistant<br/>
+      Teaching Assistant<br/><br/>
+      <small>Office Hours:<br>Mon 4-5pm</small>
+      <small>Bloomberg 260</small>
     </div> <!-- CARD-->
   </div> <!-- COL -->
 </div><!--row-->
