--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: cmu
-title: ML Hardware and Systems
+title: Special Topics on Reconfigurable Computing and FPGA Design
 ---
 
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
@@ -8,21 +8,21 @@ title: ML Hardware and Systems
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    ECE 5545 (CS 5775) is a master's level course that takes a hardware-centric view of machine learning systems, from constrained embedded microcontrollers to large distributed multi-GPU systems. These are our learning objectives:
+    ECE 6950 is a PhD level course about reconfigurable computing with FPGAs. These are our learning objectives:
     </p>
     <p> 
     <ul>
       <li>
-        Understand how machine learning algorithms run on computer systems. This includes both the hardware and the software that maps computations onto the computer chips.
+        Understand FPGA architecture and CAD.
       </li>
       <li>
-        Apply key optimization techniques such as pruning, quantization and distillation to machine learning algorithms to improve their efficiency on different hardware platforms.
+        Compare FPGA-based computing to other devices like CPUs, GPUs, and DSPs.
       </li>
       <li>
-        Analyze the performance and efficiency of different hardware platforms with and without optimizations, and understand the impact of efficiency optimizations on the accuracy of a machine learning algorithm.
+        Get up to date with the latest research on reconfigurable computing.
       </li>
       <li>
-        Design both the hardware and software components of a machine learning computer system, including a compiler to map/optimize neural networks to different hardware.
+        Design and implement a large hardware project.
       </li>
     </ul>
     <a href="https://docs.google.com/document/d/1Yya44L6OOzM6w5Un4k2B5FIFXgSSzv2SnA5JnwdJzT0/edit?usp=sharing">Please read the syllabus.</a>
@@ -60,17 +60,8 @@ title: ML Hardware and Systems
   <div class="col-md-6" style="padding-top:20px">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://cornell.zoom.us/j/97114494765?pwd=d0EzdFo3RlozNkFoMlRZbSs2U2hLUT09">
+      <a href="https://cornell.zoom.us/j/99612526044?pwd=Zm55M0xlQm5zQVJVQnM0MEdWbDZhZz09">
         Zoom
-      </a>
-      </p>
-    </div>
-  </div>
-  <div class="col-md-6" style="padding-top:20px">
-    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
-      <p class="lead">
-      <a href="https://youtube.com/playlist?list=PL0mFAhrXqy9CuopJhAB8GVu_Oy7J0ery6">
-        Lecture Videos (2022)
       </a>
       </p>
     </div>
@@ -101,18 +92,6 @@ title: ML Hardware and Systems
       <small>Bloomberg 257</small>
     </div> <!-- CARD -->
   </div> <!-- COL -->
-
-  <div class="col-md-3">
-    <div class="card border-light bg-light h-100 pt-2 px-2 pb-2">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="yash.jpeg" alt="">
-      <br/>
-      Yash Akhauri<br/>
-      <a href="mailto:ya255@cornell.edu">ya255@cornell.edu </a>
-      Teaching Assistant<br/><br/>
-      <small>Office Hours:<br>Mon 4-5pm</small>
-      <small>Bloomberg 260</small>
-    </div> <!-- CARD-->
-  </div> <!-- COL -->
 </div><!--row-->
 
 
@@ -126,7 +105,7 @@ title: ML Hardware and Systems
 </div><!--row-->
 <div class="row">
   <div class="col-md-12">
-    <iframe width=100% height=1400 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQbrKf9Gdxc5FfvrWUmveGdjYnj2l9k_dsi38LcNP49IVAFhwJa1SqMhlhNNKYh1Qe5XbWHD9Pl6-uq/pubhtml?gid=606622566&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <iframe width=100% height=1400 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTLTfw1QjwMSAyvoknMRlO8OcgBsTskBcvcCv5aBzmhGr9JPLTtSkBTNIwUDoSxsxfu8D7QaQgBI5tu/pubhtml?gid=606622566&single=true"></iframe>
   </div>
 </div>
 
