--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@ title: Special Topics on Reconfigurable Computing and FPGA Design
       <br/>
       Mohamed Abdelfattah <br/>
       <a href="mailto:mohamed@cornell.edu"><small>mohamed@cornell.edu</small></a>
-      Instructor <br/><br/>
-      <small>Office Hours:<br>Wed 1-1.30pm</small>
-      <small>Bloomberg 257</small>
+      Instructor <br/>
     </div> <!-- CARD -->
   </div> <!-- COL -->
 </div><!--row-->
