--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Special Topics on Reconfigurable Computing and FPGA Design
       </p>
     </div>
   </div>
-  <div class="col-md-6" style="padding-top:20px">
+  <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
       <a href="https://cornell.zoom.us/j/99612526044?pwd=Zm55M0xlQm5zQVJVQnM0MEdWbDZhZz09">
