--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: cmu
-title: Special Topics on Reconfigurable Computing and FPGA Design
+title: Special Topics on Deep Learning Efficiency
 ---
 
 <!-- OVERVIEW AND LINK TO SYLLABUS -->
