--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@ title: Special Topics on Deep Learning Efficiency
   <div class="col-md-12">
     <p class="lead">Overview</p>
     <p>
-    ECE 6950 is a PhD level course about reconfigurable computing with FPGAs. These are our learning objectives:
+    ECE 6950 is a PhD level course that investigates the latest efficiency techniques used in deep learning. These are our learning objectives:
     </p>
     <p> 
     <ul>
       <li>
-        Understand FPGA architecture and CAD.
+        Get up to date with the latest research on deep learning efficiency.
       </li>
       <li>
-        Compare FPGA-based computing to other devices like CPUs, GPUs, and DSPs.
+        Develop advanced understanding of existing efficiency methods for LLMs, SDXL, and NeRF.
       </li>
       <li>
-        Get up to date with the latest research on reconfigurable computing.
-      </li>
-      <li>
-        Design and implement a large hardware project.
+        Design and implement a deep learning efficiency project.
       </li>
     </ul>
-    <a href="https://docs.google.com/document/d/1ou_3VGVU9YyEJHuH0Jy_TZli1iU77L8ufcHcKwrOYJU/edit?usp=sharing">Please read the syllabus.</a>
+    <a href="https://docs.google.com/document/d/17j9zdWokjUo2zSE3Gz6lz8DvcTqEngwTgAoTPmw87sc/edit?usp=sharing">Please read the syllabus.</a>
     </p>
   </div><!--col-md-12-->
 </div><!--row-->
@@ -94,7 +91,7 @@ title: Special Topics on Deep Learning Efficiency
 </div><!--row-->
 <div class="row">
   <div class="col-md-12">
-    <iframe width=100% height=1400 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTLTfw1QjwMSAyvoknMRlO8OcgBsTskBcvcCv5aBzmhGr9JPLTtSkBTNIwUDoSxsxfu8D7QaQgBI5tu/pubhtml?gid=606622566&single=true"></iframe>
+    <iframe width=100% height=1400 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT9xS6zTwfju1HUbVO01UEf05zkrkYiRiv6JLO0xV6syBq91VT3LzY49HuNar5q9IdKwN_N6aI-FeuJ/pubhtml?gid=606622566&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   </div>
 </div>
 
