--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Special Topics on Deep Learning Efficiency
         Get up to date with the latest research on deep learning efficiency.
       </li>
       <li>
-        Develop advanced understanding of existing efficiency methods for LLMs, SDXL, and NeRF.
+        Develop advanced understanding of existing efficiency methods for LLMs, SD, and NeRF.
       </li>
       <li>
         Design and implement a deep learning efficiency project.
