--- a/index.html
+++ b/index.html
@@ -39,18 +39,7 @@ title: Special Topics on Deep Learning Efficiency
   <div class="col-md-6">
     <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
       <p class="lead">
-      <a href="https://www.gradescope.com/courses/561127">
-        Gradescope
-      </a>
-      </p>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
-      <p class="lead">
-      <a href="https://cornell.zoom.us/j/99612526044?pwd=Zm55M0xlQm5zQVJVQnM0MEdWbDZhZz09">
-        Zoom
-      </a>
+      <a href="https://cornell.zoom.us/j/97185061948?pwd=u6v4zvCSPhlcqZFfb5kgvzcSGz7sgd.1">Zoom</a>
       </p>
     </div>
   </div>
