--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@ title: Special Topics on Deep Learning Efficiency
       <a href="https://cornell.zoom.us/j/97185061948?pwd=u6v4zvCSPhlcqZFfb5kgvzcSGz7sgd.1">Zoom</a>
       </p>
     </div>
+  </div>  
+  <div class="col-md-6">
+    <div class="card border-light bg-light pt-3 justify-content-center align-items-center">
+      <p class="lead">
+      <a href="https://docs.google.com/spreadsheets/d/1oJcWOvB0EmXgwu1VNwahUuMXOAM0D3myVGj3Ox7FmQ8/edit?usp=sharing">Suggest a Paper</a>
+      </p>
+    </div>
   </div>
 </div>
-
-
 
 
 <hr />
